URLEncode: Add CSS to prevent hidden text overflow of result

--- a/share/goodie/urlencode/urlencode.css
+++ b/share/goodie/urlencode/urlencode.css
@@ -1,7 +1,4 @@
-.zci--urlencode .zci__content pre {
-    /* word-wrap is alias used in IE, but accepted everywhere */
-    word-wrap: break-word;
-    /* overflow-wrap is new name for word-wrap */
-    overflow-wrap: break-word;
+.zci--urlencode .c-base__title {
     word-break: break-all;
+    word-wrap: break-word;
 }
